// proto/user.proto
syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
}

message GetUserByIdRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
}
